# SPLIT-ICML

./: README.md  SPLIT_Usage.ipynb  licketysplit_phase4.md  pyproject.toml  scikit_contributing.md  scikit_general_steps.md  split_next_steps.md  test.py
.github/workflows/: wheels.yml
pyproject-build/cp310-cp310-linux_x86_64/: .ninja_deps  .ninja_log  .skbuild-info.json  CMakeCache.txt  CMakeInit.txt  build.ninja  cmake_install.cmake  gosdt_cli  install_manifest.txt
pyproject-build/cp310-cp310-linux_x86_64/.cmake/api/v1/reply/: cache-v2-dde20a79cf9a3224d489.json  cmakeFiles-v1-a8ed35ddf007af8e0fbf.json  codemodel-v2-213b631921e7b8345de6.json  directory-.-Release-e8cc45c382a02c9b644c.json  directory-_deps.json-build-Release-de4891d6e032a5bd8ae5.json  index-2025-05-24T21-29-54-0291.json  (+3 more)
resplit/: README.md  pyproject.toml  setup.py
resplit/example/: resplit_example.py
resplit/resplit/: helper_functions_resplit.py  resplit.py  tutorial.ipynb
resplit/resplit/model/: treefarms.py
resplit/src/: configuration.cpp  gosdt.cpp  optimizer.cpp  task.cpp
resplit/src/optimizer/dispatch/: dispatch.hpp
resplit/test_treefarms/: TreeFARMS_Lookahead_test.ipynb  helper_functions_treefarms_lookahead.py  model_lookahead_3.pkl  netherlands_binary_aggressive.csv  netherlands_model_lookahead_3.pkl
resplit/treefarms/: __init__.py  resplit.py
split/: README.md  pyproject.toml
split/src/libgosdt/src/: task.cpp
split/src/split/: LicketySPLIT.py  LicketySplitClassifier.py  SPLIT.py  _tree.py  train_greedy.py  utils.py
src/split/: LicketySPLIT.py  SPLIT.py
