[project]
name = "split_resplit_combined"
version = "0.1.0"
description = "Combined package of A and B"
authors = [{ name="Your Name", email="you@example.com" }]
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["split", "resplit"]